package fatec.gov.br.e1.musica;

public class CurvaDoDiabo {
    private String localizacao;
    private int perigosidade;
    private String nome;

    // Construtor
    public CurvaDoDiabo(String localizacao, int perigosidade, String nome) {
        this.localizacao = localizacao;
        this.perigosidade = perigosidade;
        this.nome = nome;
    }

    // Getters e Setters
    public String getLocalizacao() {
        return localizacao;
    }

    public void setLocalizacao(String localizacao) {
        this.localizacao = localizacao;
    }

    public int getPerigosidade() {
        return perigosidade;
    }

    public void setPerigosidade(int perigosidade) {
        this.perigosidade = perigosidade;
    }

    public String getNome() {
        return nome;
    }

    public void setNome(String nome) {
        this.nome = nome;
    }

    // Método da classe
    public void provocarAcidente() {
        System.out.println("A " + nome + " provoca um acidente com explosão na estrada.");
    }
}
